<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>lingua_mechanica_kinematics_plugin</name>
  <version>0.0.1</version>
  <description>Lingua Mechanica Kinematics Plugin</description>
  <maintainer email="pau.carre@gmail.com">Pau Carre Cardona</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>

  <export>
    <moveit_core plugin="${prefix}/lingua_mechanica_kinematics_plugin_description.xml"/>
  </export>

</package>
